Fix wrong background appearing right of navbar

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -238,7 +238,7 @@ body.ember-application {
     display: inline;
     font-family: $raleway;
     margin-left: -55px;
-    margin-top: 120px;
+    margin-top: 110px;
     height: 70px;
     font-size: 20px;
     opacity: .60;
@@ -348,6 +348,6 @@ body.ember-application {
     height: 96vh;
     margin-left: -80px;
     margin-top: -20px;
-    width: 137%;
+    width: 132%;
   }
 }
